--- a/css/global.css
+++ b/css/global.css
@@ -1,72 +1,59 @@
 /* Base Theme ============================================================= */
 /* Reset ------------------------------------------------------------------ */
-/*
-    global.css - resets default browser styling
-    http://tantek.com/log/2004/09.html#d06t2354
-    http://www.vox.com/.shared/css/base.css by beausmith.com
-    http://developer.yahoo.com/yui/reset/
-*/
-:link, :visited {
+/* global.css - resets default browser styling
+http://tantek.com/log/2004/09.html#d06t2354
+http://www.vox.com/.shared/css/base.css by beausmith.com
+http://developer.yahoo.com/yui/reset/ */:link, :visited {
     text-decoration: none;
 }
-
 html, body, div, ul, ol, li, dl, dt, dd, form, fieldset, input, textarea, h1, h2, h3, h4, h5, h6, pre, code, p, blockquote, hr, th, td {
     margin: 0;
     padding: 0;
 }
-
 h1, h2, h3, h4, h5, h6 {
     font-size: 100%;
     font-weight: normal;
 }
-
 table {
     border-spacing: 0;
 }
-
 fieldset, img, abbr, acronym {
     border: 0;
 }
 
 /* strict reset by uncommenting lines below */
 address, caption, cite, code, dfn, em, strong, b, u, s, i, th, var {
-    /* font-style: normal; */
-    /* font-weight: normal; */
+    /* font-style: normal;
+    */
+    /* font-weight: normal;
+    */
 }
-
 ol, ul {
     list-style: none;
 }
-
 caption, th {
     text-align: left;
 }
-
 q:before, q:after {
     content: '';
 }
-
 a {
     text-decoration: underline;
     outline: none;
 }
-
 hr {
     border: 0;
     height: 1px;
     background-color: #000;
     color: #000;
 }
-
 a img, :link img, :visited img {
     border: none;
 }
-
 address {
     font-style: normal;
     display: inline;
 }
-
 body {
     color: #556677;
     margin: 0;
@@ -78,35 +65,32 @@ body {
     width: 98%;
     font-size: 14px;
 }
-
 body a:link, body a:visited {
     color: blue;
 }
-
 body a:hover {
     color: #f00;
 }
-
 .container {
     width: 980px;
     margin: 0 auto;
 }
-
 .container header {
     padding: 20px 0;
     text-indent: 0.5em;
     font-size: 1.8em;
     border-bottom: 1px solid #ccc;
 }
-
 .container header a, .container header a:link {
     color: #556677;
 }
 .container .content {
     padding: 1em;
     min-height: 400px;
+    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
 }
-
 footer {
     text-align: right;
     padding: 20px 0;
